--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                             <a class="nav-link" href="#about">Tentang Saya</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#galeri">Galeri</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#portofolio">Portofolio</a>
                         </li>
                         <li class="nav-item">
@@ -48,42 +51,46 @@
     </header>
 
     <main>
-        <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
-            <div class="carousel-indicators" id="home">
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img width="100%" src="foto/bg1.jpg">
-                    <div class="container">
-                        <div class="carousel-caption text-start">
-                            <h1 style="font-size: 50px;" class="gaya-font">Selamat Datang</h1>
-                            <br>
-                            <p class="opacity-75" style="font-size: 30px;"><b>Website Profil Luthfiah Azzahra</b></p>
+        <div id="home">
+            <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+                <div class="carousel-indicators" id="home">
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img width="100%" src="foto/bg1.jpg">
+                        <div class="container">
+                            <div class="carousel-caption text-start">
+                                <h1 style="font-size: 50px;" class="gaya-font">Selamat Datang</h1>
+                                <br>
+                                <p class="opacity-75" style="font-size: 30px;"><b>Website Profil Luthfiah Azzahra</b>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img width="100%" src="foto/bg2.jpg">
+                        <div class="container">
+                            <div class="carousel-caption">
+                                <h1 style="font-size: 50px;" class="gaya-font">Fotografi & Teknologi</h1>
+                                <br>
+                                <p style="font-size: 30px;"><b>Menggabungkan seni dan inovasi dalam karya</b></p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <img width="100%" src="foto/bg2.jpg">
-                    <div class="container">
-                        <div class="carousel-caption">
-                            <h1 style="font-size: 50px;" class="gaya-font">Fotografi & Teknologi</h1>
-                            <br>
-                            <p style="font-size: 30px;"><b>Menggabungkan seni dan inovasi dalam karya</b></p>
-                        </div>
-                    </div>
-                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
 
 
@@ -121,7 +128,8 @@
                         </tr>
                         <tr>
                             <td style="color: black;"><strong>Alamat</strong></td>
-                            <td style="color: black;">: Dusun Laut Tador, Desa Laut Tador, Kecamatan Laut Tador, Kabupaten Batu Bara, Provinsi Sumatera Utara, Indonesia</td>
+                            <td style="color: black;">: Dusun Laut Tador, Desa Laut Tador, Kecamatan Laut Tador,
+                                Kabupaten Batu Bara, Provinsi Sumatera Utara, Indonesia</td>
                         </tr>
                     </table>
                 </div>
@@ -131,7 +139,7 @@
             </div>
         </div>
 
-        <div class="container marketing" id="portofolio">
+        <div class="container marketing" id="galeri">
             <div class="row featurette">
                 <div class="col-md-12">
                     <center>
@@ -435,7 +443,8 @@
                     <div class="info-item  d-flex flex-column justify-content-center align-items-center">
                         <i class="bi bi-map"></i>
                         <h3>Alamat</h3>
-                        <p>Dusun Laut Tador, Desa Laut Tador, Kecamatan Laut Tador, Kabupaten Batu Bara, Provinsi Sumatera Utara, Indonesia</p>
+                        <p>Dusun Laut Tador, Desa Laut Tador, Kecamatan Laut Tador, Kabupaten Batu Bara, Provinsi
+                            Sumatera Utara, Indonesia</p>
                     </div>
                 </div>
 
@@ -444,13 +453,17 @@
                         <i class="bi bi-envelope"></i>
                         <h3>Email</h3>
                         <p>luthfiaazzahra828@gmail.com</p>
+                        <br>
                     </div>
                 </div>
             </div>
 
             <div class="row gy-4 mt-1">
                 <div class="col-lg-12 ">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63732.240383392455!2d99.2147280464463!3d3.2843576027436607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3033d9380ccf27a1%3A0xe67633889f0ab0f7!2sLaut%20Tador%2C%20Kec.%20Sei%20Suka%2C%20Kabupaten%20Batu%20Bara%2C%20Sumatera%20Utara!5e0!3m2!1sid!2sid!4v1739590482929!5m2!1sid!2sid" width="100%" height="650" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63732.240383392455!2d99.2147280464463!3d3.2843576027436607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3033d9380ccf27a1%3A0xe67633889f0ab0f7!2sLaut%20Tador%2C%20Kec.%20Sei%20Suka%2C%20Kabupaten%20Batu%20Bara%2C%20Sumatera%20Utara!5e0!3m2!1sid!2sid!4v1739590482929!5m2!1sid!2sid"
+                        width="100%" height="650" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
 
